--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
     </section>
 
     <!--COLONNE  -->
+
     <section>
       <div class="tre_colonne">
+
+        <!--  COLONNA1  -->
+
         <div class="colonna1 brown center">
           <h3><i class="fas fa-rss"></i>ORGANIC <br>THEMES</h3>
           <ul>
@@ -51,14 +55,21 @@
             <a href="#"><li>The show must go on,The Miracle,The Work</li></a>
           </ul>
         </div>
+
+        <!--COLONNA CENTRALE  -->
+
         <div class="colonna2 brown">
           <h3 class="left">TITOLO TRE COLONNE</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
+        <!-- TERZA COLONNA  -->
+
         <div class="colonna3 center brown">
           <h3>TEXT WIDGET</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
         </div>
+
+        <!-- QUARTA COLONNA  -->
         <div class="colonna4 center brown">
           <h3>TEXT WIDGET</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -66,6 +77,7 @@
         </div>
 
 
+        <!-- ULTIMA COLONNA  -->
 
       </div>
     </section>
@@ -81,6 +93,7 @@
       </div>
     </section>
 
+    <!-- FOOTER   -->
     <footer>
       <h4 class="center">PAGINA REALIZZATA DA DANIELE FONTANA</h4>
       <hr>
